@@ -20,11 +20,27 @@
 </table>
 
 <table class="section">
-<tr><td>Downloads</td></tr>
+<tr><td>Releases</td></tr>
 </table>
-<p><a
-href="http://people.redhat.com/jhealy/plugins/eclipse-rpm.zip">Eclipse-RPM</a>
-(October 13, 2004)</p>
+
+<table class="grid" cellpadding="5" border="1">
+<p></p>
+<tr>
+<th>Version</th>
+<th>Date</th>
+</tr>
+<tr>
+<td><a href="http://people.redhat.com/jhealy/plugins/eclipse-rpm.zip">Initial contribution</a></td>
+<td>October 13, 2004</td>
+</tr>
+</table>
+<p></p>
+
+<table class="section">
+<tr><td>Nightly Builds</td></tr>
+</table>
+<p>Nightly builds for Eclipse-RPM are available on 
+<a href="http://people.redhat.com/handcock/eclipse-rpm">people.redhat.com</a>.</p>
 
 </body>
 </html>
