@@ -1,3 +1,7 @@
+2005-01-11  Jeremy Handcock  <handcock@redhat.com>
+
+	* downloads.html: Add nightly builds.
+
 2005-01-04  Jeremy Handcock  <handcock@redhat.com>
 
 	* developer/structure.html: Update status.
